--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url: https://sryimnoob.github.io
 date_format: "ordinal"
-title: 菜菜子的小菜园
+title: 菜菜子的菜花园
 subtitle: ""
 description: ""
 keywords: 
