--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,6 @@ components:
     # 分享
     share:
         enabled: false
-    # 不蒜子访问统计
-    busuanzi:
-        enabled: true
-        start_date: 2020-05-03
 # 压缩页面内容
 compress_html:
   clippings: all
@@ -112,7 +108,7 @@ collections:
 #      Comments    #
 # ---------------- #
 # support provider: disqus, gitment, gitalk
-# comments_provider: gitalk
+comments_provider: gitalk
 # !!!重要!!! 请修改下面这些信息为你自己申请的
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
@@ -127,10 +123,10 @@ gitment:
         client_secret: 
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: 
-    repo: 
-    clientID: 
-    clientSecret: 
+    owner: SryImNoob
+    repo: blog-comments
+    clientID: 87425a3cb9687714cbf9
+    clientSecret: 2d4f49b1e2e0199d597702859559fb533f8b549c
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
@@ -147,7 +143,7 @@ simple_jekyll_search:
 #      Google      #
 # ---------------- #
 google:
-    analytics_id:
+    analytics_id: UA-176079476-1
     adsense:
         footer: true
         sidebar: true 
