--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ highlight_theme: github
 author: SryImNoob
 organization: 
 organization_url: 
-github_username: sryimnoob
-location: Shandong, China
+github_username: SryImNoob
+location: 在那山的那边海的那边
 email: speakingchinglish@gmail.com
 
 # ---------------- #
