--- a/_config.yml
+++ b/_config.yml
@@ -54,12 +54,12 @@ navs:
     label: 分类
 
   -
-    href: /archives/
-    label: 归档
-    
-  -
     href: /tags/
     label: 标签
+
+#   -
+#     href: /archives/
+#     label: 归档
 
 #   -
 #     href: /open-source/
