--- a/_data/links.yml
+++ b/_data/links.yml
@@ -4,7 +4,7 @@
   
 - name: Meng's Notebook
   url: https://meng1024.github.io/
-  src: www
+  src: life
   
 - name: 码志
   url: http://mazhuang.org
