--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://sryimnoob.github.io
 date_format: "ordinal"
 title: 菜菜子的菜花园
-subtitle: "总是要到等到睡觉前 才知道功课只做了一点点"
+subtitle: "睡觉前 功课只做了一点点"
 description: ""
 keywords: 
 timezone: Asia/Shanghai
