--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ components:
         enabled: false
 # 压缩页面内容
 compress_html:
-  clippings: pre
+#   clippings: all
   comments: ["<!--", "-->"]
 # 文章字数统计
 word_count:
