--- a/_data/words.yml
+++ b/_data/words.yml
@@ -11,7 +11,7 @@
 - Knock, knock, Neo.
 
 # 膜法师
-- too young, too simple, sometimes naive.
+- Too young, too simple, sometimes naive.
 - 图样图森破
 
 # Django Unchained
