--- a/_data/words.yml
+++ b/_data/words.yml
@@ -21,3 +21,11 @@
 - 有一种自由叫做孤独 它在我一生静静飞舞
 - 有一种梦想叫做迷惘 它在我不眠的夜里飞翔
 - 有一种永恒叫做悲伤 它让我奔跑不悔路上
+
+# 打工人
+- 打工人，打工魂，打工都是人上人！
+- 早上好，打工人！
+- 没有困难的工作，只有勇敢的打工人！
+- 我要悄悄打工，然后惊艳所有人！
+- 打工可能会少活十年，不打工你一天也活不下去！
+- 不是工作需要我，而是我需要工作，我打工，我快乐！
