--- a/_data/words.yml
+++ b/_data/words.yml
@@ -1,7 +1,3 @@
-# 童年
-- 总是要等到睡觉前 才知道功课只做了一点点
-- 总是要等到考试以后 才知道该念的书都没有念
-
 # 社会心理学
 - 生活是正着来活 却是倒着去理解
 
@@ -10,17 +6,24 @@
 - Follow the white rabbit.
 - Knock, knock, Neo.
 
-# 膜法师
-- Too young, too simple, sometimes naive.
-- 图样图森破
-
 # Django Unchained
 - Too old to die young.
+
+# 童年
+- 总是要等到睡觉前 才知道功课只做了一点点
+- 总是要等到考试以后 才知道该念的书都没有念
 
 # 生命之诗
 - 有一种自由叫做孤独 它在我一生静静飞舞
 - 有一种梦想叫做迷惘 它在我不眠的夜里飞翔
 - 有一种永恒叫做悲伤 它让我奔跑不悔路上
+
+# Sketch Plane
+- Don't know where I'm going but I feel the pain
+
+# 膜法师
+- Too young, too simple, sometimes naive.
+- 图样图森破
 
 # 打工人
 - 打工人，打工魂，打工都是人上人！
