--- a/_data/words.yml
+++ b/_data/words.yml
@@ -19,7 +19,7 @@
 - 有一种永恒叫做悲伤 它让我奔跑不悔路上
 
 # Sketch Plane
-- Don't know where I'm going but I feel the pain
+- Don't know where I'm going but I feel the pain.
 
 # 膜法师
 - Too young, too simple, sometimes naive.
