--- a/_data/words.yml
+++ b/_data/words.yml
@@ -35,9 +35,9 @@
 ## 膜法师
 - Too young, too simple, sometimes naive.
 - 图样图森破
-- 一个人的命运啊，当然要靠自我奋斗，但是也要考虑到历史的行程
-- 苟利国家生死以，岂因祸福避趋之
-- 很惭愧，就做了一点微小的工作
+- 一个人的命运啊，当然要靠自我奋斗，但是也要考虑到历史的行程。
+- 苟利国家生死以，岂因祸福避趋之。
+- 很惭愧，就做了一点微小的工作。
 
 ## 打工人
 - 打工人，打工魂，打工都是人上人！
