--- a/_data/words.yml
+++ b/_data/words.yml
@@ -14,6 +14,10 @@
 ## Django Unchained
 - Too old to die young.
 
+## 未分类
+- With great power comes great fun.
+- What doesn\'t kill you makes you stronger.
+- BEWARE OF THE DOG
 
 # 歌
 
